# project-vox

./: .env  README.md  pyproject.toml
app/: database.py  final_chain.py  server.py
app/api/auth/: auth.py
app/core/: config.py  security.py  send_email.py
app/crud/: user.py
app/db/: deps.py  session.py
app/models/: __init__.py  otp.py  user.py
app/schemas/: user.py
